--- a/video.html
+++ b/video.html
@@ -58,8 +58,8 @@
 	</script>
 	<link href="" rel="canonical" />
 
-	<meta property="og:title" content="GHETTO GAGGERS - Amani Wett 2" />
-	<meta property="og:image" content="contents/videos_screenshots/0/41/preview.jpg" />
+	<meta property="og:title" content="DHIRAJHUB" />
+	<meta property="og:image" content="./images/logo1.jpg" />
 	<meta property="og:description"
 		content="Black bitch gets tossed and turned before getting dicked down in more positions that we can count. Or maybe we just lost track of them once they started looking like a gymnastics trial. Either way, he gets sucked, she gets fucked, we all have a good, good time." />
 </head>
