--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -30,7 +30,7 @@ firebase.initializeApp(firebaseConfig);
 
 // After the page is loaded, fetch video data from Firebase
 document.addEventListener('DOMContentLoaded', function() {
-    var dbRef = firebase.database().ref('uploads/main/'); // Adjust path as needed
+    var dbRef = firebase.database().ref('uploads/main'); // Adjust path as needed
     dbRef.on('value', function(snapshot) {
         var videos = snapshot.val();
         var videoItems = [];
