--- a/first.html
+++ b/first.html
@@ -23,6 +23,7 @@
 	<script src="./js/jQuery.js"></script>
 	<script src="./js/main.js"></script>
 	<script src="./js/main.min.js@v=7.3"></script>
+	<script src="./js/drop.js"></script>
 
 	<link href="./css/all-responsive-white.css?v=7.3" rel="stylesheet" type="text/css" />
 	<link href="./css/jquery.fancybox-white.css?v=7.3" rel="stylesheet" type="text/css" />
@@ -154,35 +155,7 @@
 							<a href="" id="item1">SITES</a>
 						</li>
 						<li>
-							<div class="dropdown" onclick="myFunction()">
-								<button class="dropbtn">CATEGORIES</button>
-								<div id="myDropdown" class="dropdown-content">
-
-									<a href="./categories/arab" class="nav_dropdown-item">Arab</a>
-									<a href="./categories/asian" class="nav_dropdown-item">Asian</a>
-									<a href="./categories/bbc" class="nav_dropdown-item">BBC</a>
-									<a href="./categories/bbw" class="nav_dropdown-item">BBW</a>
-									<a href="./categories/bhabhi" class="nav_dropdown-item">Bhabhi</a>
-									<a href="./categories/blowjob" class="nav_dropdown-item">BigTits</a>
-									<a href="./categories/black" class="nav_dropdown-item">Black</a>
-									<a href="./categories/blowjob" class="nav_dropdown-item">BLOWJOB</a>
-									<a href="./categories/cumshot" class="nav_dropdown-item">Cumshot</a>
-									<a href="./categories/bollywood.html" class="nav_dropdown-item">BOLLYWOOD</a>
-									<a href="./categories/deepthroat" class="nav_dropdown-item">Deepthroat</a>
-									<a href="./categories/gangbang" class="nav_dropdown-item">Gangbang</a>
-									<a href="./categories/hardcore" class="nav_dropdown-item">Hardcore</a>
-									<a href="./categories/jav" class="nav_dropdown-item">JAV</a>
-									<a href="./categories/hentai" class="nav_dropdown-item">Hentai</a>
-									<a href="./categories/hindi" class="nav_dropdown-item">Hindi</a>
-									<a href="./categories/indian" class="nav_dropdown-item">Indian</a>
-									<a href="./categories/maid" class="nav_dropdown-item">Maid</a>
-									<a href="./categories/mms" class="nav_dropdown-item">MMS</a>
-									<a href="./categories/movie" class="nav_dropdown-item">Movie</a>
-									<a href="./categories/solo" class="nav_dropdown-item">Solo</a>
-									<a href="./categories/exclusive" class="nav_dropdown-item">Exclusive</a>
-
-								</div>
-							</div>
+							<a href="" id="item1">HOME</a>
 						</li>
 						<li>
 							<a href="/html/profile" id="item4">ABOUT US</a>
