--- a/first.html
+++ b/first.html
@@ -155,7 +155,7 @@
 							<a href="" id="item1">SITES</a>
 						</li>
 						<li>
-							<a href="" id="item1">HOME</a>
+							<a href="/index.html" id="item1">HOME</a>
 						</li>
 						<li>
 							<a href="/html/profile" id="item4">ABOUT US</a>
