--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 							</div>
 
-							<!--script for redirecting video-->
+							<!--script for redirecting video--->
 							<script>
 								document.querySelectorAll('.item').forEach(item => {
   item.addEventListener('click', function() {
