--- a/first.html
+++ b/first.html
@@ -63,7 +63,7 @@
 
 		<div class="header">
 			<div class="logo" id="logo">
-				<a href="/"><img src="./images/logo.jpeg" width="130" height="43" alt=""></a>
+				<a href="/index.html"><img src="./images/logo.jpeg" width="130" height="43" alt=""></a>
 			</div>
 			<div class="social-bookmarks">
 				<!-- AddThis Button BEGIN -->
