--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 
 								<div class="item" data-video-url="https://mega.nz/embed/5P1igYqB#DyLgQGgwvlDcj6Js6mr0o7p3L8BNIUzgSQQQMvZj--I" data-number="0">
-									<img src="https://mega.nz/file/ZLlBiBDQ#yq9c13OgTiKoR8V3yCpYBlJzn61waqac-XLPVp0R45w">
+									<img src="./Thumbnail/Screenshot_20240406-140139.jpg">
 									<p> Pallavi Chanda Unacademy Teacher</p>
 								</div>
 
